fix: fix double-link-list

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "scripts": {
     "test": "jest",
+    "dev": "jest --watch",
     "structure": "jest ./src/Structure",
     "algorithm": "jest ./src/Algorithm",
     "practices": "jest ./src/Practices",
