--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
     "type": "git",
     "url": "git+https://github.com/hugewilliam/Algorithm-and-Data-Structure.git"
   },
-  "keywords": [
-    "algorithm"
-  ],
+  "keywords": ["algorithm"],
   "author": "liwuhou",
   "license": "ISC",
   "bugs": {
@@ -31,6 +29,7 @@
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
     "@babel/preset-typescript": "^7.16.0",
+    "@biomejs/biome": "1.9.4",
     "babel-jest": "^27.3.1",
     "jest": "^27.3.1",
     "ts-node": "^10.4.0"
